mp1/src/cool.y.output
Terminals unused in grammar

    FOR
    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | class_list class error

    5 class: CLASS TYPEID '{' feature_list '}'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'
    7      | CLASS error

    8 feature_list: ε
    9             | feature_list feature ';'
   10             | feature_list error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID optional_assign

   13 formal_list: ε
   14            | formal_list_nonempty

   15 formal_list_nonempty: formal
   16                     | formal_list_nonempty ',' formal
   17                     | formal_list_nonempty ',' error
   18                     | error ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expr: OBJECTID ASSIGN expr
   21     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr '.' OBJECTID '(' expr_list ')'
   23     | OBJECTID '(' expr_list ')'
   24     | IF expr THEN expr ELSE expr FI
   25     | WHILE expr LOOP expr POOL
   26     | '{' expr_seq '}'
   27     | LET let_bindings_list
   28     | CASE expr OF case_list ESAC
   29     | NEW TYPEID
   30     | ISVOID expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | '~' expr
   36     | expr '<' expr
   37     | expr LE expr
   38     | expr '=' expr
   39     | NOT expr
   40     | '(' expr ')'
   41     | OBJECTID
   42     | INT_CONST
   43     | STR_CONST
   44     | BOOL_CONST

   45 let_bindings_list: OBJECTID ':' TYPEID optional_assign IN expr
   46                  | OBJECTID ':' TYPEID optional_assign ',' let_bindings_list
   47                  | error ',' let_bindings_list

   48 expr_list: ε
   49          | expr_list_nonempty

   50 expr_list_nonempty: expr
   51                   | expr_list_nonempty ',' expr
   52                   | expr_list_nonempty ',' error
   53                   | error ',' expr

   54 case_list: case
   55          | case_list case
   56          | case_list error ';'
   57          | error ';' case

   58 case: OBJECTID ':' TYPEID DARROW expr ';'

   59 expr_seq: expr ';'
   60         | expr_seq expr ';'
   61         | expr_seq error ';'
   62         | error ';' expr ';'

   63 optional_assign: ε
   64                | ASSIGN expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 21 22 23 40
    ')' (41) 11 21 22 23 40
    '*' (42) 33
    '+' (43) 31
    ',' (44) 16 17 18 46 47 51 52 53
    '-' (45) 32
    '.' (46) 21 22
    '/' (47) 34
    ':' (58) 11 12 19 45 46 58
    ';' (59) 2 3 9 10 56 57 58 59 60 61 62
    '<' (60) 36
    '=' (61) 38
    '@' (64) 21
    '{' (123) 5 6 11 26
    '}' (125) 5 6 11 26
    '~' (126) 35
    error (256) 4 7 10 17 18 47 52 53 56 57 61 62
    CLASS (258) 5 6 7
    ELSE (259) 24
    FI (260) 24
    IF (261) 24
    IN (262) 45
    INHERITS (263) 6
    LET (264) 27
    LOOP (265) 25
    POOL (266) 25
    THEN (267) 24
    WHILE (268) 25
    CASE (269) 28
    ESAC (270) 28
    OF (271) 28
    DARROW (272) 58
    NEW (273) 29
    ISVOID (274) 30
    STR_CONST <symbol> (275) 43
    INT_CONST <symbol> (276) 42
    BOOL_CONST <boolean> (277) 44
    TYPEID <symbol> (278) 5 6 11 12 19 21 29 45 46 58
    OBJECTID <symbol> (279) 11 12 19 20 21 22 23 41 45 46 58
    ASSIGN (280) 20 64
    NOT (281) 39
    LE (282) 37
    FOR (283)
    ERROR (284)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3 4
        on right: 1 3 4
    class <class_> (49)
        on left: 5 6 7
        on right: 2 3 4
    feature_list <features> (50)
        on left: 8 9 10
        on right: 5 6 9 10
    feature <feature> (51)
        on left: 11 12
        on right: 9
    formal_list <formals> (52)
        on left: 13 14
        on right: 11
    formal_list_nonempty <formals> (53)
        on left: 15 16 17 18
        on right: 14 16 17
    formal <formal> (54)
        on left: 19
        on right: 15 16 18
    expr <expression> (55)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 11 20 21 22 24 25 28 30 31 32 33 34 35 36 37 38 39 40 45 50 51 53 58 59 60 62 64
    let_bindings_list <expression> (56)
        on left: 45 46 47
        on right: 27 46 47
    expr_list <expressions> (57)
        on left: 48 49
        on right: 21 22 23
    expr_list_nonempty <expressions> (58)
        on left: 50 51 52 53
        on right: 49 51 52
    case_list <cases> (59)
        on left: 54 55 56 57
        on right: 28 55 56
    case <case_> (60)
        on left: 58
        on right: 54 55 57
    expr_seq <expressions> (61)
        on left: 59 60 61 62
        on right: 26 60 61
    optional_assign <expression> (62)
        on left: 63 64
        on right: 12 45 46


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    5 class: CLASS • TYPEID '{' feature_list '}'
    6      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}'
    7      | CLASS • error

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •
    3 class_list: class_list • class ';'
    4           | class_list • class error

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class • ';'

    ';'  shift, and go to state 9


State 5

    7 class: CLASS error •

    $default  reduce using rule 7 (class)


State 6

    5 class: CLASS TYPEID • '{' feature_list '}'
    6      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class • ';'
    4           | class_list class • error

    error  shift, and go to state 12
    ';'    shift, and go to state 13


State 9

    2 class_list: class ';' •

    $default  reduce using rule 2 (class_list)


State 10

    6 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 14


State 11

    5 class: CLASS TYPEID '{' • feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 15


State 12

    4 class_list: class_list class error •

    $default  reduce using rule 4 (class_list)


State 13

    3 class_list: class_list class ';' •

    $default  reduce using rule 3 (class_list)


State 14

    6 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}'

    '{'  shift, and go to state 16


State 15

    5 class: CLASS TYPEID '{' feature_list • '}'
    9 feature_list: feature_list • feature ';'
   10             | feature_list • error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


State 16

    6 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 21


State 17

   10 feature_list: feature_list error • ';'

    ';'  shift, and go to state 22


State 18

   11 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID • ':' TYPEID optional_assign

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


State 19

    5 class: CLASS TYPEID '{' feature_list '}' •

    $default  reduce using rule 5 (class)


State 20

    9 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 25


State 21

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}'
    9 feature_list: feature_list • feature ';'
   10             | feature_list • error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 26

    feature  go to state 20


State 22

   10 feature_list: feature_list error ';' •

    $default  reduce using rule 10 (feature_list)


State 23

   11 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}'

    error     shift, and go to state 27
    OBJECTID  shift, and go to state 28

    ')'  reduce using rule 13 (formal_list)

    formal_list           go to state 29
    formal_list_nonempty  go to state 30
    formal                go to state 31


State 24

   12 feature: OBJECTID ':' • TYPEID optional_assign

    TYPEID  shift, and go to state 32


State 25

    9 feature_list: feature_list feature ';' •

    $default  reduce using rule 9 (feature_list)


State 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' •

    $default  reduce using rule 6 (class)


State 27

   18 formal_list_nonempty: error • ',' formal

    ','  shift, and go to state 33


State 28

   19 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 34


State 29

   11 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 35


State 30

   14 formal_list: formal_list_nonempty •
   16 formal_list_nonempty: formal_list_nonempty • ',' formal
   17                     | formal_list_nonempty • ',' error

    ','  shift, and go to state 36

    $default  reduce using rule 14 (formal_list)


State 31

   15 formal_list_nonempty: formal •

    $default  reduce using rule 15 (formal_list_nonempty)


State 32

   12 feature: OBJECTID ':' TYPEID • optional_assign

    ASSIGN  shift, and go to state 37

    $default  reduce using rule 63 (optional_assign)

    optional_assign  go to state 38


State 33

   18 formal_list_nonempty: error ',' • formal

    OBJECTID  shift, and go to state 28

    formal  go to state 39


State 34

   19 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 40


State 35

   11 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 41


State 36

   16 formal_list_nonempty: formal_list_nonempty ',' • formal
   17                     | formal_list_nonempty ',' • error

    error     shift, and go to state 42
    OBJECTID  shift, and go to state 28

    formal  go to state 43


State 37

   64 optional_assign: ASSIGN • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 58


State 38

   12 feature: OBJECTID ':' TYPEID optional_assign •

    $default  reduce using rule 12 (feature)


State 39

   18 formal_list_nonempty: error ',' formal •

    $default  reduce using rule 18 (formal_list_nonempty)


State 40

   19 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 19 (formal)


State 41

   11 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 59


State 42

   17 formal_list_nonempty: formal_list_nonempty ',' error •

    $default  reduce using rule 17 (formal_list_nonempty)


State 43

   16 formal_list_nonempty: formal_list_nonempty ',' formal •

    $default  reduce using rule 16 (formal_list_nonempty)


State 44

   24 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 60


State 45

   27 expr: LET • let_bindings_list

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_bindings_list  go to state 63


State 46

   25 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 64


State 47

   28 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 65


State 48

   29 expr: NEW • TYPEID

    TYPEID  shift, and go to state 66


State 49

   30 expr: ISVOID • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 67


State 50

   43 expr: STR_CONST •

    $default  reduce using rule 43 (expr)


State 51

   42 expr: INT_CONST •

    $default  reduce using rule 42 (expr)


State 52

   44 expr: BOOL_CONST •

    $default  reduce using rule 44 (expr)


State 53

   20 expr: OBJECTID • ASSIGN expr
   23     | OBJECTID • '(' expr_list ')'
   41     | OBJECTID •

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 41 (expr)


State 54

   39 expr: NOT • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 70


State 55

   35 expr: '~' • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 71


State 56

   26 expr: '{' • expr_seq '}'

    error       shift, and go to state 72
    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr      go to state 73
    expr_seq  go to state 74


State 57

   40 expr: '(' • expr ')'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 75


State 58

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr
   64 optional_assign: ASSIGN expr •

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 64 (optional_assign)


State 59

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 85


State 60

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   24     | IF expr • THEN expr ELSE expr FI
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr

    THEN  shift, and go to state 86
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


State 61

   47 let_bindings_list: error • ',' let_bindings_list

    ','  shift, and go to state 87


State 62

   45 let_bindings_list: OBJECTID • ':' TYPEID optional_assign IN expr
   46                  | OBJECTID • ':' TYPEID optional_assign ',' let_bindings_list

    ':'  shift, and go to state 88


State 63

   27 expr: LET let_bindings_list •

    $default  reduce using rule 27 (expr)


State 64

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   25     | WHILE expr • LOOP expr POOL
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


State 65

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   28     | CASE expr • OF case_list ESAC
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84


State 66

   29 expr: NEW TYPEID •

    $default  reduce using rule 29 (expr)


State 67

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   30     | ISVOID expr •
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr

    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 30 (expr)


State 68

   20 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 91


State 69

   23 expr: OBJECTID '(' • expr_list ')'

    error       shift, and go to state 92
    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    ')'  reduce using rule 48 (expr_list)

    expr                go to state 93
    expr_list           go to state 94
    expr_list_nonempty  go to state 95


State 70

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr
   39     | NOT expr •

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 39 (expr)


State 71

   21 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | expr • '.' OBJECTID '(' expr_list ')'
   31     | expr • '+' expr
   32     | expr • '-' expr
   33     | expr • '*' expr
   34     | expr • '/' expr
   35     | '~' expr •
   36     | expr • '<' expr
   37     | expr • LE expr
   38     | expr • '=' expr

    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 35 (expr)


State 72

   62 expr_seq: error • ';' expr ';'

    ';'  shift, and go to state 96


State 73
